razorpay failure handled

--- a/views/admin/category.ejs
+++ b/views/admin/category.ejs
@@ -334,8 +334,8 @@
                     'content-type':"application/json",
                 },
                 body: JSON.stringify({
-                    categoryId: categoryId,  //  Pass categoryId here
-                    percentage: amount, //  Include the percentage entered by the user
+                    categoryId: categoryId,  
+                    percentage: amount, 
                 }),
               });
               const data = await response.json();
