--- a/views/user/verify-otp.ejs
+++ b/views/user/verify-otp.ejs
@@ -238,7 +238,7 @@
              timer = 60
              document.getElementById('otp').disabled = false
              
-             document.getElementById('timerValue').classList.remove('expired')//this indicates that when we the current time of otp aldready sended after that only the otp should resend
+             document.getElementById('timerValue').classList.remove('expired')
              document.getElementById("resendOtpBtn").disabled = true;
 
              startTimer()
