--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -175,11 +175,11 @@
                                   </li> -->
                                   
                                 <li>
-                                    <a href="about.html" class="sf-with-ul">About</a>
+                                    <a href="/about" class="sf-with-ul">About</a>
 
                                 </li>
                                 <li>
-                                    <a href="contact.html" class="sf-with-ul">Contacts</a>
+                                    <a href="/contact" class="sf-with-ul">Contacts</a>
 
                                    
                                 </li>
